--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "node src/server.js"
+    "start": "node src/server.js",
+    "testOrigins": "node src/test/testGetAvailableOrigins.js"
   },
   "type": "module",
   "keywords": [],
